# HausdorffK3-tree-pub

./: .gitignore  CMakeLists.txt  README.md
apps/: benchmark.cpp  benchmark_ryu_kamata.cpp  compare_metrics.cpp  comprehensive_benchmark.cpp  experiment.cpp  experiment1.cpp  main.cpp  snapshot_benchmark.cpp
include/HausdorffK3-tree/: BaseLine.hpp  HyperRectangle.hpp  Point.hpp  chausdorff_v2.hpp  ck3tree_v2.hpp  hausdorff.hpp  k3tree.hpp  ryu_kamata_3d.hpp
include/libcds/: Array.h
src/: chausdorff_v2.cpp  ck3tree_v2.cpp  hausdorff.cpp  k3tree.cpp  ryu_kamata_3d.cpp
src/libcds/static/bitsequence/.deps/: BitSequence.Plo  BitSequenceBuilderDArray.Plo  BitSequenceBuilderRG.Plo  BitSequenceBuilderRRR.Plo  BitSequenceBuilderSDArray.Plo  BitSequenceDArray.Plo  BitSequenceRG.Plo  BitSequenceRRR.Plo  BitSequenceSDArray.Plo  TableOffsetRRR.Plo  sdarraySadakane.Plo
src/libcds/static/coders/.deps/: HuffmanCoder.Plo  huff.Plo
src/libcds/static/mapper/.deps/: Mapper.Plo  MapperCont.Plo  MapperNone.Plo  MapperRev.Plo
src/libcds/static/permutation/.deps/: Permutation.Plo  PermutationBuilderMRRR.Plo  PermutationBuilderWT.Plo  PermutationMRRR.Plo  PermutationWT.Plo  perm.Plo
src/libcds/static/sequence/.deps/: BitmapsSequence.Plo  Sequence.Plo  SequenceAlphPart.Plo  SequenceBuilderAlphPart.Plo  SequenceBuilderGMR.Plo  SequenceBuilderGMRChunk.Plo  SequenceBuilderStr.Plo  SequenceBuilderWaveletMatrix.Plo  SequenceBuilderWaveletTree.Plo  SequenceBuilderWaveletTreeNoptrs.Plo  SequenceBuilderWaveletTreeNoptrsS.Plo  SequenceGMR.Plo  SequenceGMRChunk.Plo  WaveletMatrix.Plo  WaveletTree.Plo  WaveletTreeNoptrs.Plo  WaveletTreeNoptrsS.Plo  wt_coder.Plo  wt_coder_binary.Plo  wt_coder_huff.Plo  wt_node.Plo  wt_node_internal.Plo  wt_node_leaf.Plo
src/libcds/utils/.deps/: Array.Plo  cppUtils.Plo  libcdsBitString.Plo  timing.Plo
tests/: CMakeLists.txt  compressed_k3_hausdorff_test.cpp  example_hausdorff_test.cpp  exhaustive_test_hyperrectangle.cpp  exhaustive_test_point.cpp  k3_hausdorff_test.cpp  new_octree_test.cpp  point_test.cpp  simple_hausdorff_test.cpp  specific_hausdorff_test.cpp
